[package]
name = "bip157"
version = "0.3.1"
authors = ["Rob <rob@2140.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Bitcoin light-client according to the BIP-157/BIP-158 specifications"
repository = "https://github.com/2140-dev/kyoto"
readme = "README.md"
keywords = ["bitcoin", "cryptography", "network", "peer-to-peer"]
categories = ["cryptography::cryptocurrencies"]
rust-version = "1.84.0"

[dependencies]
addrman = { package = "bitcoin-address-book", version = "0.1.0" }
bitcoin = { version = "0.32.7", default-features = false, features = [
    "rand-std",
] }
bip324 = { version = "0.7.0", default-features = false, features = [
    "tokio",
] }
tokio = { version = "1.19", default-features = false, features = [
    "rt-multi-thread",
    "sync",
    "time",
    "io-util",
    "net",
    "macros",
] }

[dev-dependencies]
corepc-node = { version = "0.7.1", default-features = false, features = [
    "28_0", "download"
] }
hex = { version = "0.4.0" }
serde = { version = "1.0.219", features = ["derive"]}
tracing = "0.1"
tracing-subscriber = "0.3"
tempfile = "3"
tokio = { version = "1.19", default-features = false, features = [
    "full",
    "test-util",
] }

[lib]
name = "bip157"
path = "src/lib.rs"

[[example]]
name = "signet"
path = "example/signet.rs"

[[example]]
name = "bitcoin"
path = "example/bitcoin.rs"
